# conan

./: .gitignore  README.md  docker-compose.yaml  init.sh  setup-artifactory.sh
consume/hello-package/: build.sh
consume/use-mymath/: CMakeLists.txt  conanfile.txt  main.cpp
consume/use_poco_example/: README.md  change-profile.sh
create_hello_package/: README.md
hello/: conanfile.py
hello2/: conanfile.py
infrastructure/artifactory_server/: README.md  setup_artifactory.sh
infrastructure/conan-docker/: Dockerfile
infrastructure/conan_docker/: Dockerfile
misc/create_hello_package/: README.md
package_binaries/: .gitignore  README.md  conanfile.py
package_binaries/test/: conanfile.txt
produce-and-consume/: README.md  docker-compose.yaml
produce-and-consume/consume_hello_package/: CMakeLists.txt  build.sh  conanfile.txt  main.cpp
produce-and-consume/create_hello_package/: create-hello-package.sh
produce/create_hello_package/: clang
produce/hello-package/: README.md  conanfile.py  create-hello-package.sh  setup-conan.sh
produce/mymath/: CMakeLists.txt  README.md  conanfile.py
produce/mymath/src/: mymath.cpp
produce/mymath/test_package/: CMakeLists.txt  conanfile.py
produce/mymath/test_package/src/: example.cpp
produce/package_binaries/: README.md
produce/use_export_sources/: README.md
produce/use_export_sources/src/: CMakeLists.txt  hello.cpp
setup_artifactory_server/: README.md  setup.sh  setup_artifactory.sh
use_export_sources/: README.md  conanfile.py
use_poco_example/: README.md
